#1298 Display last note in Documents grid