@@ -10,6 +10,7 @@ import java.util.Date;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import javax.servlet.ServletException;
 import javax.servlet.http.HttpServletRequest;
@@ -255,7 +256,7 @@ public abstract class AbstractRemoteService extends RemoteServiceServlet {
 			throw new ServerValidationException(ie.getMessage(),
 					ie.getErrors().values().stream()
 							.map(e -> new ServerValidationError(e.getAttribute(), e.getLabel(), e.getDescription()))
-							.toList().toArray(new ServerValidationError[0]));
+							.collect(Collectors.toList()) .toArray(new ServerValidationError[0]));
 		} else if (throwable instanceof PermissionException) {
 			throw new AccessDeniedException(throwable.getMessage());
 		} else if (throwable instanceof ServerException se) {
